--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url(img/Background.jpg);
+    background-image: url(img/City\ Landscape.jpg);
     background-position: center;
     background-size: cover;
     color: white;
