--- a/style.css
+++ b/style.css
@@ -11,16 +11,16 @@ body{
     height: 20vh;
 }
 
-.Limes{
-    margin: 50px auto;
+.food{
+    width: 650px;
+    padding: 40px;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: aquamarine;
+    border-radius: 50px;
 }
-.FriedChicken{
-    margin: 50px auto;
-}
-.HotDog{
-    margin: 50px auto;
-}
-
 
 h1{
     color: black;
