--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Oxygen', sans-serif;
-    background-color: teal; 
+    background-color: rgb(82, 163, 163); 
 }
 
 .background{
@@ -26,6 +26,7 @@ h1{
     margin-top: 40px;
     text-align: center;
 }
+
 h2{
     color: black;
     text-align: center;
